--- a/style.css
+++ b/style.css
@@ -76,7 +76,11 @@ body {
 }
 
 .menu-item-large {
-    font-size: large;
+  font-size: 1rem;
+  color: inherit;
+  text-decoration: none;
+  display: block;
+  padding: 0.5em 0;
 }
 
 .result-modal-container {
